2010-10-07  Miles Bader  <Miles Bader <miles@gnu.org>>

	* emacs-lisp/regexp-opt.el (regexp-opt): Add `symbols' mode.

2010-10-07  Glenn Morris  <rgm@gnu.org>

	* mail/rmail.el (mail-sendmail-delimit-header, mail-header-end)
	(mail-position-on-field): Remove declarations.
	(mail-position-on-field): Autoload it.
	(rmail-retry-failure): Replace use of mail-sendmail-delimit-header
	and mail-header-end.  Don't require sendmail.

	* emacs-lisp/shadow.el (shadow-font-lock-keywords): New variable.
	(shadow-mode): New mode.
	(shadow-find-file): New button.
	(list-load-path-shadows): Use shadow-mode and buttons.

	* iimage.el (iimage-version): Remove.
	(iimage-mode-image-search-path, iimage-mode-image-regex-alist):
	Turn into defcustoms.
	(iimage-mode-map): Give it a doc string.

	* calendar/appt.el (appt-activate): Give a warning rather than an error
	if there is no diary-file.

2010-10-06  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp-sh.el (tramp-sh-file-name-handler-alist): Use
	`tramp-handle-find-backup-file-name'.

2010-10-06  Glenn Morris  <rgm@gnu.org>

	* font-core.el (font-lock-defaults-alist): Remove variable.
	(font-lock-mode): Doc fix.
	(font-lock-default-function): Do not consult font-lock-defaults-alist.
	* font-lock.el (font-lock-refresh-defaults): Doc fix.
	(font-lock-set-defaults): Doc fix.
	Do not consult font-lock-defaults-alist.

	* hilit-chg.el (hilit-chg-get-diff-list-hk): Declare `e' for compiler.

	* emacs-lisp/cl.el: No longer provide cl-19.

2010-10-05  Michael Albinus  <michael.albinus@gmx.de>

	* net/tramp.el (tramp-handle-directory-files-and-attributes)
	(tramp-handle-file-exists-p, tramp-handle-file-newer-than-file-p):
	New defuns, taken from tramp-smb.el.
	(tramp-coding-system-change-eol-conversion)
	(tramp-set-process-query-on-exit-flag): Removed.

	* net/tramp-compat.el (top): Do not check for byte-compiler
	objects.
	(tramp-compat-coding-system-change-eol-conversion)